--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "dayjs": "^1.11.7",
     "expo": "~47.0.12",
     "expo-blur": "^12.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "~2.12.0"
   },
   "devDependencies": {
